--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "SEE LICENSE IN license.md",
   "dependencies": {
     "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.0",
     "mysql2": "^3.8.0"
   }
